# CudaMONSEL

./: .gitignore  PROBLEMS.md  README.md
CudaMONSEL/: CMakeLists.txt  (+1 more)
CudaMONSEL/CudaMONSEL/gov/nist/microanalysis/: CMakeLists.txt
CudaMONSEL/CudaMONSEL/gov/nist/microanalysis/EPQLibrary/: AlgorithmClass.cu  AlgorithmClass.cuh  AlgorithmUser.cu  AlgorithmUser.cuh  AtomicShell.cu  AtomicShell.cuh  AtomicWeights.csv  BetheElectronEnergyLoss.cu  BetheElectronEnergyLoss.cuh  BrowningEmpiricalCrossSection.cu  BrowningEmpiricalCrossSection.cuh  CaveatBase.cu  CaveatBase.cuh  Composition.cpp  Composition.cu  Composition.cuh  Composition.h  Composition_GPU.cu  Composition_GPU.cuh  CzyzewskiMottCrossSection.cu  CzyzewskiMottCrossSection.cuh  CzyzewskiMottScatteringAngle.cu  CzyzewskiMottScatteringAngle.cuh  EdgeEnergy.cu  EdgeEnergy.cuh  Element.cpp  Element.cu  Element.cuh  Element_GPU.cu  Element_GPU.cuh  FromSI.cu  FromSI.cuh  FromSI_GPU.cu  FromSI_GPU.cuh  Gas.cu  Gas.cuh  GasScatteringCrossSection.cu  GasScatteringCrossSection.cuh  ITransform.cuh  Material.cu  (+30 more)
CudaMONSEL/CudaMONSEL/gov/nist/microanalysis/EPQTests/: AtomicShellTest.cu  AtomicShellTest.cuh  BetheElectronEnergyLossTest.cu  BetheElectronEnergyLossTest.cuh  CylindricalShapeTest.cu  CylindricalShapeTest.cuh  EdgeEnergyTest.cu  EdgeEnergyTest.cuh  ElementTest.cu  ElementTest.cuh  ElementTest_GPU.cu  ElementTest_GPU.cuh  MaterialTest.cu  MaterialTest.cuh  Math2Test.cu  Math2Test.cuh  MeanIonizationPotentialTest.cu  MeanIonizationPotentialTest.cuh  MonteCarloSSTest.cu  MonteCarloSSTest.cuh  RegionBaseTest.cu  RegionBaseTest.cuh  SphereTest.cu  SphereTest.cuh  SumShapeTest.cu  SumShapeTest.cuh  UncertainValue2Test.cu  UncertainValue2Test.cuh  UncertainValue2Test_.cu  UncertainValue2Test_.cuh  UncertainValue2Test_GPU.cu  UncertainValue2Test_GPU.cuh
(+460 files in other folders)
